--- a/hoamai.css
+++ b/hoamai.css
@@ -14,7 +14,7 @@
     animation-iteration-count:infinite;
     animation-timing-function:linear;
     animation-fill-mode:forwards;
-    background:url(https://github.com/duyplus/CssTet/blob/main/hoamai.png?raw=true)
+    background:url(https://raw.githubusercontent.com/duyplus/CssTet/main/hoamai.png)
 }
  .g-snows>li:nth-child(1){
     left:17%;
