--- a/hoadao.css
+++ b/hoadao.css
@@ -14,7 +14,7 @@
     animation-iteration-count:infinite;
     animation-timing-function:linear;
     animation-fill-mode:forwards;
-    background:url(https://raw.githubusercontent.com/duyplus/CssTet/main/hoadao.png)
+    background:url(https://lh3.googleusercontent.com/-tj60nk0dZI8/YAncICC3yQI/AAAAAAAADJw/cOlFSvb3mGoCGSZq-DomlE2kIriZTurnACLcBGAsYHQ/h120/hoadao.png)
 }
 .g-snows>li:nth-child(1){
     left:17%;
